@@ -1,12 +1,0 @@
-dnl This program is distributed in the hope that it will be useful,
-dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
-dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-dnl GNU General Public License for more details.
-dnl
-dnl Author: Sylvain Gubian, PMP SA
-dnl
-dnl #########################################################################################
-
-AC_INIT("DESCRIPTION")
-LIBS="$LIBS -lm"
-AC_OUTPUT(src/Makevars)
